calc webstream bitrate rate per sender.